--- a/.gitignore
+++ b/.gitignore
@@ -396,3 +396,8 @@ FodyWeavers.xsd
 
 # JetBrains Rider
 *.sln.iml
+
+#Settings files
+/ProjName.UI.MVC/appsettings.json
+/StoreFront/StoreFront.UI.MVC/appsettings.json
+/StoreFront/StoreFront.UI.MVC/appsettings.Development.json
